--- a/Aufgabe1.3/Stylesheet.css
+++ b/Aufgabe1.3/Stylesheet.css
@@ -4,7 +4,7 @@ body {
     border-style: dashed;
     border-width: 2px;
     border-color: black;
-    border-radius: 35px;
+    border-radius: 15px 15px 35px 35px;
     background-image: url(https://raw.githubusercontent.com/gabriel-rausch/EIA1-Material/master/L03/task_material/images/bg.png);
     background-repeat: repeat;
     width:800px;
@@ -16,11 +16,11 @@ body {
     box-shadow: 0 20px 25px 10px rgba(0, 0, 0, 0.4), 0 5px 25px 0 rgba(0, 0, 0, 0.19);
 }
 
-#Content{
+header+div{
     padding: 3%;
 }
 
-html {
+[lang|=de] {
     background-color:#D98F8F;
 }
 
@@ -75,7 +75,7 @@ html {
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:17px;
+	font-size:1em;
 	font-weight:bold;
 	padding:12px 45px;
 	text-decoration:none;
@@ -89,7 +89,8 @@ html {
     left:50%;
     transform: translateX(-50%)
 }
-}
+
+
 .button:hover {
 	background-color:#f29e9e;
 }
@@ -114,12 +115,14 @@ html {
 	text-shadow:0px 1px 6px #d98f8f;
     margin-top:0.5%;
     position: relative;
-    left:17%;
+    left:25%;
     transform: translateX(-50%)
 }
+
 .Absendebutton:hover {
 	background-color:#f29e9e;
 }
+
 .Absendebutton:active {
 	position:relative;
 	top:1px;
@@ -135,7 +138,7 @@ html {
     width:5%;
     background-color: #D98F8F;
     border: 1px solid white;
-    padding:10px;
+    padding:1.4%;
     border-radius: 100%;
     
   transition: transform .7s ease-in-out;
@@ -206,30 +209,41 @@ p {
 }
 
 h1{
-    font-family: Arial, Helvetica, sans-serif;
     margin-top: 6%;
     margin-bottom:5%;
-    color: #2A4759;
     letter-spacing: 3px;
     word-spacing: 2px;
-    font-style: normal;
-    font-variant: small-caps;
+    position:relative;
     width: 85%;
     font-size: 3em;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    display:block;
+    animation: mymove 1s ease-out;
+    animation-fill-mode: forwards;
+    animation-direction: normal;
+
 }
+
+@keyframes mymove {
+    from {left:-20%; opacity:0%;}
+    to {left:0%; opacity: 100%;}
+}
+
 h2{
-    font-family: Arial, Helvetica, sans-serif;
-    color: #2A4759;
     margin-top:4%;
     letter-spacing: 3px;
     word-spacing: 2px;
-    font-style: normal;
-    font-variant: small-caps;
     text-transform: capitalize;
     width: 85%;
+}
+
+h1, h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #2A4759;    
+    font-style: normal;
+    font-variant: small-caps;
 }
 
 
@@ -238,7 +252,14 @@ h2{
     margin-bottom: 2%;
 }
 
-h3{
+[title~=Kadse] {
+    display:block;
+    margin-right:auto;
+    margin-left:auto;
+    margin-bottom:4%;
+}
+
+div>h3{
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-variant: small-caps;
@@ -290,7 +311,7 @@ h3{
     width:90%;
 }
 
-.Input {
+Form input {
     width:50%;
     margin-bottom:0.5%;
     background-color: lightgrey;
@@ -320,6 +341,7 @@ margin-left:10%;
     position:absolute;
     right:16%;
     top:8%;
+    transition: 0.2s ease-in-out;
 
 }
 
@@ -328,8 +350,6 @@ margin-left:10%;
     position:absolute;
     right:15.5%;
     top:-2%;
-
-
 }
 
 
@@ -338,6 +358,7 @@ margin-left:10%;
     position:absolute;
     right:21.5%;
     top:0%;
+    transition: 0.2s ease-in-out;
     
 }
     
@@ -368,7 +389,7 @@ Header {
 }
 
 
-#Pdf {
+object[data$=".pdf"]{
     width:750px;height:450px
 }
 
